--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,9 @@ collections:
       layout: post
     output: true
     permalink: /news/:path/
+  projects:
+    output: false
+    permalink: 
 
 announcements:
   enabled: true
